--- a/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
+++ b/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.13.0" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.23" />
+  </ItemGroup>
 
 </Project>
