--- a/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
+++ b/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.13.0" />
+    <PackageReference Include="Kmd.Logic.Identity.Authorization" Version="2.1.0" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.23" />
   </ItemGroup>
 
