--- a/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
+++ b/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
@@ -1,13 +1,13 @@
 {
   "TokenProvider": {
-    "ClientId": "8fdf6485-67fa-4df6-b775-7ef3d00eeb08",
-    "ClientSecret": "e_C6eOZR-WZ~79rjC4iapwVcFG0AX3uZ~N",
-    "AuthorizationScope": "https://logicidentityprod.onmicrosoft.com/DevPreProdLogicAPI/user_impersonation"
+    "ClientId": "",
+    "ClientSecret": "",
+    "AuthorizationScope": ""
   },
   "FileSecurity": {
-    "SubscriptionId": "c8987d1d-1983-4378-bac3-37d00632e24b"
+    "SubscriptionId": ""
   },
   "FileSecurityDetails": {
-    "CertificateId": "8917f050-846a-42e9-a995-1f89d2ed81ab"
+    "CertificateId": ""
   }
 }
