--- a/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
+++ b/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
@@ -4,10 +4,10 @@
     "ClientSecret": "",
     "AuthorizationScope": ""
   },
-  "FileSecurity": {
+  "FileSecurityOptions": {
     "SubscriptionId": ""
   },
-  "FileSecurityDetails": {
+  "CertificateDetails": {
     "CertificateId": ""
   }
 }
