sample project of get api

--- a/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
+++ b/sample/Kmd.Logic.FileSecurity.Client.ConfigurationSample/appsettings.json
@@ -9,5 +9,8 @@
   },
   "CertificateDetails": {
     "CertificateId": ""
+  },
+  "SignConfigurationDetails": {
+    "SignConfigurationId":  ""
   }
 }
