added additional properties to get sample pdf and also path to the location to drop the generated documents.

--- a/sample/Kmd.Logic.FileSecurity.Client.DocumentPrivilegesSample/appsettings.json
+++ b/sample/Kmd.Logic.FileSecurity.Client.DocumentPrivilegesSample/appsettings.json
@@ -8,6 +8,8 @@
     "SubscriptionId": ""
   },
   "SignConfigurationDetails": {
+    "PdfEmptySampleLocation": "",
+    "PdfGeneratedDocumentLocation": "",
     "SignConfigurationId": ""
   }
 }
