--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,7 +4,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>8.0</LangVersion>
     <TreatWarningsAsErrors Condition="'$(Configuration)' == 'Release'">true</TreatWarningsAsErrors>
-    <NoWarn>$(NoWarn);CS1591;SA1633;SA1200;SA1201</NoWarn>
+    <NoWarn>$(NoWarn);CS1591;SA1633;SA1200;SA1201;SA1600;SA1009;SA1111;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup>
