Addition of Sign configuration APIs (#23)
* regenerated get api

* sample project of get api

* resolved pr comments

* Sign configuration POST API (#13)

* Sign configuration POST API added

* pr comment

* updated internal clients

* added get client api

* added sign config update client

* updated Doc

* regenerated

* removed create update request

* changed discription

* doc changes

* display formatted sign configuration

* resolved pr comments

* Get all certificates changes in Client

* updated readme file

* added delete api changes

* updated

* resolved pr comment

* Added GetAllSignConfiguration method To client

* Sample project to generate documents with configured privileges (#18)

* included sample proj to generate doc with privileges

* logged path to dowload file

* added additional properties to get sample pdf and also path to the location to drop the generated documents.

* updated to handle file name of generated doc

* updated README.md

* removed duplicate icon

* altered using syntax

* Client changes for get owner password

* updated readme file

* Alignment change

* alignmet changed

* Updated client

* PR comment

Co-authored-by: Nikhil C Revanaki <NCR@kmd.dk>
Co-authored-by: Avinash B R <VNS@kmd.dk>
Co-authored-by: nikhilcr939 <83641247+nikhilcr939@users.noreply.github.com>
Co-authored-by: avinashbr123 <43473936+avinashbr123@users.noreply.github.com>
Co-authored-by: Avin Mathew <avin101@gmail.com>

--- a/sample/Kmd.Logic.FileSecurity.Client.DocumentPrivilegesSample/appsettings.json
+++ b/sample/Kmd.Logic.FileSecurity.Client.DocumentPrivilegesSample/appsettings.json
@@ -7,10 +7,9 @@
   "FileSecurityOptions": {
     "SubscriptionId": ""
   },
-  "CertificateDetails": {
-    "CertificateId": ""
-  },
   "SignConfigurationDetails": {
-    "SignConfigurationId":  ""
+    "PdfEmptySampleLocation": "",
+    "PdfGeneratedDocumentLocation": "",
+    "SignConfigurationId": ""
   }
 }
