--- a/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
+++ b/src/Kmd.Logic.FileSecurity.Client/Kmd.Logic.FileSecurity.Client.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>kmd.logic.public.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -10,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.13.0" />
-    <PackageReference Include="Kmd.Logic.Identity.Authorization" Version="2.1.0" />
+    <PackageReference Include="Kmd.Logic.Identity.Authorization" Version="3.0.0" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.23" />
   </ItemGroup>
 
